--- a/source/posts/2016/08-16-podcast-04-31.html.md
+++ b/source/posts/2016/08-16-podcast-04-31.html.md
@@ -1,5 +1,5 @@
 ---
-title: "31 выпуск 04 сезона.  и прочее"
+title: "31 выпуск 04 сезона. Rails 5.0.0.1, 4.2.7.1, 3.2.22.3, dry-system, SVG 2 new features, ShiftJS, JSON.is, WAUD.js и прочее"
 date: 2016-08-16
 tags:
  - podcasts
@@ -16,26 +16,15 @@ main_image: "/images/static/04/0431.png"
 
 ## Ruby
 
- - [Rails 5.0.0.1, 4.2.7.1, and 3.2.22.3 have been released!](http://weblog.rubyonrails.org/2016/8/11/Rails-5-0-0-1-4-2-7-2-and-3-2-22-3-have-been-released/)
- - [Using State Machines to run Databases](https://www.citusdata.com/blog/2016/08/12/state-machines-to-run-databases/)
- - [Ruby Returns Incorrect Integer Or Decimal Places When Dividing Two Numbers](https://solidfoundationwebdev.com/blog/posts/ruby-returns-incorrect-integer-or-decimal-places-when-dividing-two-numbers)
- - [How to Test Rails Models with Minitest](https://semaphoreci.com/community/tutorials/how-to-test-rails-models-with-minitest)
- - [Tips for Fixing Open Source bugs](http://www.schneems.com/2016/08/03/supporing-open-source.html)
- - [Build Your Own Web Server](http://www.blackbytes.info/2016/08/build-your-own-web-server/)
- - [Bundling Dependencies Inside Ruby Gems](http://blog.presidentbeef.com/blog/2016/08/09/bundling-gem-dependencies-inside-ruby-gems/)
- - [Of an ancient Rails plugin](http://zzak.io/log/2016-08-09-of-an-ancient-rails-plugin.html)
- - [Continuous Security for Rails apps with Pipeline and Brakeman](https://jenkins.io/blog/2016/08/10/rails-cd-with-pipeline/)
- - [Doctor : An Open Source Documentation Server](https://blog.minio.io/doctor-an-open-source-documentation-server-41d86d756f15)
- - [Advanced SQL in Rails - Part 2](http://brewhouse.io/2016/08/12/sql-in-rails-part2.html)
- - [Phoenix Channels vs Rails Action Cable](https://dockyard.com/blog/2016/08/09/phoenix-channels-vs-rails-action-cable)
+ - [Rails 5.0.0.1, 4.2.7.1, and 3.2.22.3 have been released!](http://weblog.rubyonrails.org/2016/8/11/Rails-5-0-0-1-4-2-7-2-and-3-2-22-3-have-been-released/), [Phoenix Channels vs Rails Action Cable](https://dockyard.com/blog/2016/08/09/phoenix-channels-vs-rails-action-cable), [Bundling Dependencies Inside Ruby Gems](http://blog.presidentbeef.com/blog/2016/08/09/bundling-gem-dependencies-inside-ruby-gems/) и [Advanced SQL in Rails - Part 2](http://brewhouse.io/2016/08/12/sql-in-rails-part2.html)
+ - [Of an ancient Rails plugin](http://zzak.io/log/2016-08-09-of-an-ancient-rails-plugin.html), [Continuous Security for Rails apps with Pipeline and Brakeman](https://jenkins.io/blog/2016/08/10/rails-cd-with-pipeline/), [Build Your Own Web Server](http://www.blackbytes.info/2016/08/build-your-own-web-server/) и [Using State Machines to run Databases](https://www.citusdata.com/blog/2016/08/12/state-machines-to-run-databases/)
+ - [Introducing dry-system](http://dry-rb.org/news/2016/08/15/introducing-dry-system/), [Ruby Returns Incorrect Integer Or Decimal Places When Dividing Two Numbers](https://solidfoundationwebdev.com/blog/posts/ruby-returns-incorrect-integer-or-decimal-places-when-dividing-two-numbers) и [Doctor: An Open Source Documentation Server](https://blog.minio.io/doctor-an-open-source-documentation-server-41d86d756f15)
 
 ## JavaScript
 
- - [Ricardo Forth: A Forth in C, JS, WebAssembly and Asmjs](https://marianoguerra.github.io/ricardo-forth/)
- - [NX is a next generation client side framework](http://nx-framework.com/)
- - [Fuse.js - lightweight fuzzy-search library](http://fusejs.io/)
- - [Pizzicato aims to simplify the way you create and manipulate sounds via the Web Audio API](https://alemangui.github.io/pizzicato/)
- - [Toolgif - a very simple Jquery gif tooltip plugin](https://mburakerman.github.io/toolgif/)
+ - [Ricardo Forth: A Forth in C, JS, WebAssembly and Asmjs](https://marianoguerra.github.io/ricardo-forth/), [Building Themes with CSS4 Color Features](https://cloudfour.com/thinks/building-themes-with-css4-color-features/), [Smooth as Butter: Achieving 60 FPS Animations with CSS3](https://medium.com/outsystems-experts/how-to-achieve-60-fps-animations-with-css3-db7b98610108) и [SVG 2 new features](https://github.com/w3c/svgwg/wiki/SVG-2-new-features)
+ - [NX is a next generation client side framework](http://nx-framework.com/), [ShiftJS - an open source Swift to JavaScript transpiler written in JavaScript](http://www.shiftjs.com/) и [Fuse.js - lightweight fuzzy-search library](http://fusejs.io/)
+ - [JSON.is - open-source documentation for common JSON formats](http://json.is/), [WAUD.js - Web Audio Library with HTML5 audio fallback](http://www.waudjs.com/), [Pizzicato aims to simplify the way you create and manipulate sounds via the Web Audio API](https://alemangui.github.io/pizzicato/), [Toolgif - a very simple Jquery gif tooltip plugin](https://mburakerman.github.io/toolgif/) и [Smooth scroll polyfill](http://iamdustan.com/smoothscroll/)
 
 
 READMORE
