--- a/source/posts/2016/08-16-podcast-04-31.html.md
+++ b/source/posts/2016/08-16-podcast-04-31.html.md
@@ -3,11 +3,11 @@ title: "31 выпуск 04 сезона. Rails 5.0.0.1, 4.2.7.1, 3.2.22.3, dry-s
 date: 2016-08-16
 tags:
  - podcasts
-audio_url: "http://rwpod.podfm.ru/my/166/file/podfm_rwpod_my_30_166.mp3"
-audio_mirror: "https://github.com/rwpod/mirror/releases/download/04.30/0430.mp3"
+audio_url: "http://rwpod.podfm.ru/my/167/file/podfm_rwpod_my_31_167.mp3"
+audio_mirror: "https://github.com/rwpod/mirror/releases/download/04.31/0431.mp3"
 audio_format: "audio/mpeg"
-audio_length: 37819827
-duration: "00:39:17"
+audio_length: 45930885
+duration: "00:47:44"
 small_icon: mic
 main_image: "/images/static/04/0431.png"
 ---
@@ -22,7 +22,7 @@ main_image: "/images/static/04/0431.png"
 
 ## JavaScript
 
- - [Ricardo Forth: A Forth in C, JS, WebAssembly and Asmjs](https://marianoguerra.github.io/ricardo-forth/), [Building Themes with CSS4 Color Features](https://cloudfour.com/thinks/building-themes-with-css4-color-features/), [Smooth as Butter: Achieving 60 FPS Animations with CSS3](https://medium.com/outsystems-experts/how-to-achieve-60-fps-animations-with-css3-db7b98610108) и [SVG 2 new features](https://github.com/w3c/svgwg/wiki/SVG-2-new-features)
+ - [Building Themes with CSS4 Color Features](https://cloudfour.com/thinks/building-themes-with-css4-color-features/), [Smooth as Butter: Achieving 60 FPS Animations with CSS3](https://medium.com/outsystems-experts/how-to-achieve-60-fps-animations-with-css3-db7b98610108) и [SVG 2 new features](https://github.com/w3c/svgwg/wiki/SVG-2-new-features)
  - [NX is a next generation client side framework](http://nx-framework.com/), [ShiftJS - an open source Swift to JavaScript transpiler written in JavaScript](http://www.shiftjs.com/) и [Fuse.js - lightweight fuzzy-search library](http://fusejs.io/)
  - [JSON.is - open-source documentation for common JSON formats](http://json.is/), [WAUD.js - Web Audio Library with HTML5 audio fallback](http://www.waudjs.com/), [Pizzicato aims to simplify the way you create and manipulate sounds via the Web Audio API](https://alemangui.github.io/pizzicato/), [Toolgif - a very simple Jquery gif tooltip plugin](https://mburakerman.github.io/toolgif/) и [Smooth scroll polyfill](http://iamdustan.com/smoothscroll/)
 
