--- a/source/posts/2016/08-23-podcast-04-32.html.md
+++ b/source/posts/2016/08-23-podcast-04-32.html.md
@@ -1,5 +1,5 @@
 ---
-title: "32 выпуск 04 сезона.  и прочее"
+title: "32 выпуск 04 сезона. The Ruby Community and Reputation, LeSSL, Serverless Scheduled Tasks, Webpack-Dashboard и прочее"
 date: 2016-08-23
 tags:
  - podcasts
@@ -21,10 +21,8 @@ main_image: "/images/static/04/0432.png"
 
 ## JavaScript
 
- - [Tutorial: Serverless Scheduled Tasks](https://medium.com/@parall.ax/tutorial-serverless-scheduled-tasks-3c2abdd1e158)
- - [The rise of functional programming & the decline of Angular 2.0](http://blog.wolksoftware.com/the-rise-of-functional-programming-and-the-death-of-angularjs)
- - [30K Page Views for $0.21: A Serverless Story](https://fmlnerd.com/2016/08/16/30k-page-views-for-0-21-a-serverless-story/)
- - [Webpack-Dashboard - a CLI dashboard for your webpack dev server](https://github.com/FormidableLabs/webpack-dashboard)
+ - [Tutorial: Serverless Scheduled Tasks](https://medium.com/@parall.ax/tutorial-serverless-scheduled-tasks-3c2abdd1e158), [30K Page Views for $0.21: A Serverless Story](https://fmlnerd.com/2016/08/16/30k-page-views-for-0-21-a-serverless-story/) и [The rise of functional programming & the decline of Angular 2.0](http://blog.wolksoftware.com/the-rise-of-functional-programming-and-the-death-of-angularjs)
+ - [Webpack-Dashboard - a CLI dashboard for your webpack dev server](https://github.com/FormidableLabs/webpack-dashboard), [React-dates - an accessible, easily internationalizable, mobile-friendly datepicker library for the web](https://github.com/airbnb/react-dates), [Recharts - a composable charting library built on React components](http://recharts.org/) и [Papa Parse - the powerful, in-browser CSV parser for big boys and girls](http://papaparse.com/)
 
 
 READMORE
