--- a/source/posts/2016/08-30-podcast-04-33.html.md
+++ b/source/posts/2016/08-30-podcast-04-33.html.md
@@ -1,5 +1,5 @@
 ---
-title: "33 выпуск 04 сезона.  и прочее"
+title: "33 выпуск 04 сезона. Sinatra Two Point Oh, Journey of a Trailblazer, Marionette.js v3, Carbide, Odoo, In-view.js и прочее"
 date: 2016-08-30
 tags:
  - podcasts
@@ -22,10 +22,9 @@ main_image: "/images/static/04/0433.png"
 
 ## JavaScript
 
- - [Marionette.js v3. Getting started with new version](http://blog.marionettejs.com/2016/08/23/marionette-v3/index.html)
- - [The Case of the Missing React Framework](https://medium.com/@gammons/the-case-of-the-missing-react-framework-ab45c4e71b91)
- - [Building your first Atom plugin](https://github.com/blog/2231-building-your-first-atom-plugin)
- - [Carbide - an interactive JS programming environment](http://alpha.trycarbide.com/)
+ - [Marionette.js v3. Getting started with new version](http://blog.marionettejs.com/2016/08/23/marionette-v3/index.html) и [The Case of the Missing React Framework](https://medium.com/@gammons/the-case-of-the-missing-react-framework-ab45c4e71b91)
+ - [Performance Means Progressive Enhancement](http://codepen.io/tigt/post/performance-means-progressive-enhancement) и [Building your first Atom plugin](https://github.com/blog/2231-building-your-first-atom-plugin)
+ - [Carbide - an interactive JS programming environment](http://alpha.trycarbide.com/), [Odoo: SVG Odometer Effect Library](https://github.com/coderitual/odoo), [Grade.js - JavaScript library produces complementary gradients generated from the top 2 dominant colours in supplied images](http://benhowdle.im/grade/) и [In-view.js - get notified when a DOM element enters or exits the viewport](https://camwiegert.github.io/in-view/)
 
 
 READMORE
