--- a/source/posts/2016/08-30-podcast-04-33.html.md
+++ b/source/posts/2016/08-30-podcast-04-33.html.md
@@ -3,11 +3,11 @@ title: "33 выпуск 04 сезона. Sinatra Two Point Oh, Journey of a Trai
 date: 2016-08-30
 tags:
  - podcasts
-audio_url: "http://rwpod.podfm.ru/my/168/file/podfm_rwpod_my_32_168.mp3"
-audio_mirror: "https://github.com/rwpod/mirror/releases/download/04.32/0432.mp3"
+audio_url: "https://github.com/rwpod/mirror/releases/download/04.33/0433.mp3"
+audio_mirror: "https://github.com/rwpod/mirror/releases/download/04.33/0433.mp3"
 audio_format: "audio/mpeg"
-audio_length: 33336862
-duration: "00:34:37"
+audio_length: 30429572
+duration: "00:31:35"
 small_icon: mic
 main_image: "/images/static/04/0433.png"
 ---
