--- a/source/posts/2016/09-06-podcast-04-34.html.md
+++ b/source/posts/2016/09-06-podcast-04-34.html.md
@@ -1,5 +1,5 @@
 ---
-title: "34 выпуск 04 сезона. Quiet assets in Rails 5, Octoshark, JerryScript 1.0, Cesium, Granim.js, Anim8js и прочее"
+title: "34 выпуск 04 сезона. Quiet assets in Rails 5, Octoshark, JerryScript 1.0, Mobi.css, Cesium, Granim.js, Anim8js и прочее"
 date: 2016-09-06
 tags:
  - podcasts
