--- a/source/posts/2016/09-13-podcast-04-35.html.md
+++ b/source/posts/2016/09-13-podcast-04-35.html.md
@@ -23,7 +23,7 @@ main_image: "/images/static/04/0435.png"
 ## JavaScript
 
  - [Farewell to Node.js v5, Preparing for v7](https://nodejs.org/en/blog/community/v5-to-v7/), [Announcing Quill 1.0](https://quilljs.com/blog/announcing-quill-1-0/) и [Stepping down as Nodevember organizer](http://www.kevinold.com/2016/09/05/stepping-down-as-nodevember-organizer.html)
- - [Node.js Best Practices](https://www.codementor.io/nodejs/tutorial/nodejs-best-practices) и [NaN and typeof](https://medium.com/javascript-refined/nan-and-typeof-36cd6e2a4e43)
+ - [Node.js Best Practices](https://www.codementor.io/nodejs/tutorial/nodejs-best-practices), [NaN and typeof](https://medium.com/javascript-refined/nan-and-typeof-36cd6e2a4e43) и [Oh shit, git!](http://ohshitgit.com/)
  - [Awesome Grid - a curated list of grid(table) libraries and resources](https://github.com/FancyGrid/awesome-grid), [Cookies.js - super simple cookie manipulation](https://github.com/franciscop/cookies.js) и [Radiobox.css - a tiny set of CSS3 animations designed for your radio inputs](https://720kb.github.io/radiobox.css/)
 
 
