--- a/source/posts/2016/09-13-podcast-04-35.html.md
+++ b/source/posts/2016/09-13-podcast-04-35.html.md
@@ -1,5 +1,5 @@
 ---
-title: "35 выпуск 04 сезона.  и прочее"
+title: "35 выпуск 04 сезона. Five Rails Gotchas, Vim 8.0, Quill 1.0, Node.js Best Practices, Awesome Grid, Radiobox.css и прочее"
 date: 2016-09-13
 tags:
  - podcasts
@@ -17,7 +17,7 @@ main_image: "/images/static/04/0435.png"
 ## Ruby
 
  - [A proposal of new concurrency model for Ruby 3 by Koichi Sasada](http://www.atdot.net/~ko1/activities/2016_rubykaigi.pdf), [Five Rails Gotchas](https://hqc.io/2016/09/07/five-rails-gotchas.html) и [Vim 8.0 released](https://groups.google.com/forum/?utm_source=twitter.com&utm_medium=social&utm_campaign=breaking-news!-reliznulsya-vim-8.0!-https#!topic/vim_announce/EKTuhjF3ET0)
- - [Ruby’s Swiss Army Knife: The Enumerable Module](https://www.codementor.io/ruby-on-rails/tutorial/rubys-swiss-army-knife-the-enumerable-module), [When abstraction is a mistake: ActionController::TestCase](http://blog.iempire.ru/2016/09/05/rails-obstractions/) и [Ruby Gems Could Harm Your Memory](http://waiting-for-dev.github.io/blog/2016/09/07/ruby-gems-could-harm-your-memory/)
+ - [Ruby's Swiss Army Knife: The Enumerable Module](https://www.codementor.io/ruby-on-rails/tutorial/rubys-swiss-army-knife-the-enumerable-module), [When abstraction is a mistake: ActionController::TestCase](http://blog.iempire.ru/2016/09/05/rails-obstractions/) и [Ruby Gems Could Harm Your Memory](http://waiting-for-dev.github.io/blog/2016/09/07/ruby-gems-could-harm-your-memory/)
  - [How Elixir helped us scale our Video User Profile Service for the Olympics](https://medium.com/software-sandwich/how-elixir-helped-us-to-scale-our-video-user-profile-service-for-the-olympics-dd7fbba1ad4e), [Unique partial indexes with PostgreSQL](https://medium.com/little-programming-joys/unique-partial-indexes-with-postgresql-86e137905c12) и [Sneakers Exponential Retry Handler](https://github.com/mz026/sneakers_exponential_retry)
 
 ## JavaScript
