--- a/source/posts/2016/09-20-podcast-04-36.html.md
+++ b/source/posts/2016/09-20-podcast-04-36.html.md
@@ -16,14 +16,14 @@ main_image: "/images/static/04/0436.png"
 
 ## Ruby
 
- - [Ruby 2.4.0-preview2 Released](https://www.ruby-lang.org/en/news/2016/09/08/ruby-2-4-0-preview2-released/), [Raise On Developer Mistake](http://www.rubypigeon.com/posts/raise-on-developer-mistake/) и [DeviceToken and turbolinks-ios](https://buildtoship.com/devicetoken-and-turbolinks-ios/)
- - [Better File Uploads with Shrine: Uploader](https://twin.github.io/better-file-uploads-with-shrine-uploader/) и [Send SMS messages like emails in Rails with Textris](https://www.twilio.com/blog/2016/09/send-sms-messages-like-emails-in-rails-with-textris.html)
+ - [Ruby 2.4.0-preview2 Released](https://www.ruby-lang.org/en/news/2016/09/08/ruby-2-4-0-preview2-released/), [Ruby: Hash default value – be cautious when you use it](http://dev.mensfeld.pl/2016/09/ruby-hash-default-value-be-cautious-when-you-use-it/) и [Raise On Developer Mistake](http://www.rubypigeon.com/posts/raise-on-developer-mistake/)
+ - [DeviceToken and turbolinks-ios](https://buildtoship.com/devicetoken-and-turbolinks-ios/), [Better File Uploads with Shrine: Uploader](https://twin.github.io/better-file-uploads-with-shrine-uploader/) и [Send SMS messages like emails in Rails with Textris](https://www.twilio.com/blog/2016/09/send-sms-messages-like-emails-in-rails-with-textris.html)
  - [Sidekiq 4.2.1](https://github.com/mperham/sidekiq/blob/master/Changes.md#421), [Graphql-Client - GraphQL Client is a Ruby library for declaring, composing and executing GraphQL queries](https://github.com/github/graphql-client), [Swift 3.0 Released](https://swift.org/blog/swift-3-0-released/) и [Vapor - a web framework and server for Swift that works on macOS and Ubuntu](http://vapor.codes/)
 
 ## JavaScript
 
  - [Angular 2.0.0 officially released](http://angularjs.blogspot.com/2016/09/angular2-final.html)
- - [React-game-kit - make games with React & React Native](https://github.com/FormidableLabs/react-game-kit), [Reframe.js - a javascript plugin that makes unresponsive elements responsive](https://dollarshaveclub.github.io/reframe.js/) и [GraphicsJS - a lightweight JavaScript graphics library with the intuitive API, based on SVG/VML technology](http://www.graphicsjs.org/)
+ - [React-game-kit - make games with React & React Native](https://github.com/FormidableLabs/react-game-kit), [Reframe.js - a javascript plugin that makes unresponsive elements responsive](https://dollarshaveclub.github.io/reframe.js/), [GraphicsJS - a lightweight JavaScript graphics library with the intuitive API, based on SVG/VML technology](http://www.graphicsjs.org/) и [Dmitry Baranovskiy: Zen of JavaScript (video)](https://www.youtube.com/watch?v=QHs55-5FzgA)
 
 
 READMORE
