--- a/source/posts/2016/09-20-podcast-04-36.html.md
+++ b/source/posts/2016/09-20-podcast-04-36.html.md
@@ -1,5 +1,5 @@
 ---
-title: "36 выпуск 04 сезона.  и прочее"
+title: "36 выпуск 04 сезона. Ruby 2.4.0-preview2, Angular 2.0.0, N+1 is a Rails feature, OpenType Variable Fonts, Reframe.js и прочее"
 date: 2016-09-20
 tags:
  - podcasts
@@ -17,12 +17,13 @@ main_image: "/images/static/04/0436.png"
 ## Ruby
 
  - [Ruby 2.4.0-preview2 Released](https://www.ruby-lang.org/en/news/2016/09/08/ruby-2-4-0-preview2-released/), [Ruby: Hash default value – be cautious when you use it](http://dev.mensfeld.pl/2016/09/ruby-hash-default-value-be-cautious-when-you-use-it/) и [Raise On Developer Mistake](http://www.rubypigeon.com/posts/raise-on-developer-mistake/)
- - [DeviceToken and turbolinks-ios](https://buildtoship.com/devicetoken-and-turbolinks-ios/), [Better File Uploads with Shrine: Uploader](https://twin.github.io/better-file-uploads-with-shrine-uploader/) и [Send SMS messages like emails in Rails with Textris](https://www.twilio.com/blog/2016/09/send-sms-messages-like-emails-in-rails-with-textris.html)
+ - [DeviceToken and turbolinks-ios](https://buildtoship.com/devicetoken-and-turbolinks-ios/), [N+1 is a Rails feature, not a bug](https://rossta.net/blog/n+1-is-a-rails-feature.html) и [Send SMS messages like emails in Rails with Textris](https://www.twilio.com/blog/2016/09/send-sms-messages-like-emails-in-rails-with-textris.html)
  - [Sidekiq 4.2.1](https://github.com/mperham/sidekiq/blob/master/Changes.md#421), [Graphql-Client - GraphQL Client is a Ruby library for declaring, composing and executing GraphQL queries](https://github.com/github/graphql-client), [Swift 3.0 Released](https://swift.org/blog/swift-3-0-released/) и [Vapor - a web framework and server for Swift that works on macOS and Ubuntu](http://vapor.codes/)
 
 ## JavaScript
 
- - [Angular 2.0.0 officially released](http://angularjs.blogspot.com/2016/09/angular2-final.html)
+ - [Angular 2.0.0 officially released](http://angularjs.blogspot.com/2016/09/angular2-final.html), [We Have Seriously Underestimated Angular](http://developer.telerik.com/featured/you-have-seriously-underestimated-angular/) и [Dependency Injection in Angular 1 and Angular 2](https://vsavkin.com/dependency-injection-in-angular-1-and-angular-2-d69589979c18)
+ - [Three JavaScript performance fundamentals that make Bluebird fast](https://reaktor.com/blog/javascript-performance-fundamentals-make-bluebird-fast/), [Introducing OpenType Variable Fonts](https://medium.com/@tiro/https-medium-com-tiro-introducing-opentype-variable-fonts-12ba6cd2369) и [A Nerd’s Guide to Color on the Web](https://css-tricks.com/nerds-guide-color-web/)
  - [React-game-kit - make games with React & React Native](https://github.com/FormidableLabs/react-game-kit), [Reframe.js - a javascript plugin that makes unresponsive elements responsive](https://dollarshaveclub.github.io/reframe.js/), [GraphicsJS - a lightweight JavaScript graphics library with the intuitive API, based on SVG/VML technology](http://www.graphicsjs.org/) и [Dmitry Baranovskiy: Zen of JavaScript (video)](https://www.youtube.com/watch?v=QHs55-5FzgA)
 
 
