--- a/source/posts/2016/09-20-podcast-04-36.html.md
+++ b/source/posts/2016/09-20-podcast-04-36.html.md
@@ -22,7 +22,7 @@ main_image: "/images/static/04/0436.png"
 
 ## JavaScript
 
- - [Angular 2.0.0 officially released](http://angularjs.blogspot.com/2016/09/angular2-final.html), [We Have Seriously Underestimated Angular](http://developer.telerik.com/featured/you-have-seriously-underestimated-angular/) и [Dependency Injection in Angular 1 and Angular 2](https://vsavkin.com/dependency-injection-in-angular-1-and-angular-2-d69589979c18)
+ - [Angular 2.0.0 officially released](http://angularjs.blogspot.com/2016/09/angular2-final.html), [We Have Seriously Underestimated Angular](http://developer.telerik.com/featured/you-have-seriously-underestimated-angular/), [Dependency Injection in Angular 1 and Angular 2](https://vsavkin.com/dependency-injection-in-angular-1-and-angular-2-d69589979c18) и [Introducing debugger.html](https://hacks.mozilla.org/2016/09/introducing-debugger-html/)
  - [Three JavaScript performance fundamentals that make Bluebird fast](https://reaktor.com/blog/javascript-performance-fundamentals-make-bluebird-fast/), [Introducing OpenType Variable Fonts](https://medium.com/@tiro/https-medium-com-tiro-introducing-opentype-variable-fonts-12ba6cd2369) и [A Nerd’s Guide to Color on the Web](https://css-tricks.com/nerds-guide-color-web/)
  - [React-game-kit - make games with React & React Native](https://github.com/FormidableLabs/react-game-kit), [Reframe.js - a javascript plugin that makes unresponsive elements responsive](https://dollarshaveclub.github.io/reframe.js/), [GraphicsJS - a lightweight JavaScript graphics library with the intuitive API, based on SVG/VML technology](http://www.graphicsjs.org/) и [Dmitry Baranovskiy: Zen of JavaScript (video)](https://www.youtube.com/watch?v=QHs55-5FzgA)
 
