--- a/source/posts/2016/09-27-podcast-04-37.html.md
+++ b/source/posts/2016/09-27-podcast-04-37.html.md
@@ -3,11 +3,11 @@ title: "37 выпуск 04 сезона. Euruko 2016, Homebrew 1.0.0, TypeScript
 date: 2016-09-27
 tags:
  - podcasts
-audio_url: "http://rwpod.podfm.ru/my/172/file/podfm_rwpod_my_36_172.mp3"
-audio_mirror: "https://github.com/rwpod/mirror/releases/download/04.36/0436.mp3"
+audio_url: "https://github.com/rwpod/mirror/releases/download/04.37/0437.mp3"
+audio_mirror: "https://github.com/rwpod/mirror/releases/download/04.37/0437.mp3"
 audio_format: "audio/mpeg"
-audio_length: 37776907
-duration: "00:39:15"
+audio_length: 58192280
+duration: "01:00:31"
 small_icon: mic
 main_image: "/images/static/04/0437.png"
 ---
