--- a/source/posts/2016/09-27-podcast-04-37.html.md
+++ b/source/posts/2016/09-27-podcast-04-37.html.md
@@ -3,7 +3,7 @@ title: "37 выпуск 04 сезона. Euruko 2016, Homebrew 1.0.0, TypeScript
 date: 2016-09-27
 tags:
  - podcasts
-audio_url: "https://github.com/rwpod/mirror/releases/download/04.37/0437.mp3"
+audio_url: "http://rwpod.podfm.ru/my/173/file/podfm_rwpod_my_37_173.mp3"
 audio_mirror: "https://github.com/rwpod/mirror/releases/download/04.37/0437.mp3"
 audio_format: "audio/mpeg"
 audio_length: 58192280
