--- a/source/posts/2016/10-04-podcast-04-38.html.md
+++ b/source/posts/2016/10-04-podcast-04-38.html.md
@@ -3,11 +3,11 @@ title: "38 выпуск 04 сезона. Leaflet 1.0, Concurrency in Ruby 3 with
 date: 2016-10-04
 tags:
  - podcasts
-audio_url: "http://rwpod.podfm.ru/my/173/file/podfm_rwpod_my_37_173.mp3"
-audio_mirror: "https://github.com/rwpod/mirror/releases/download/04.37/0437.mp3"
+audio_url: "http://rwpod.podfm.ru/my/174/file/podfm_rwpod_my_38_174.mp3"
+audio_mirror: "https://github.com/rwpod/mirror/releases/download/04.38/0438.mp3"
 audio_format: "audio/mpeg"
-audio_length: 58192280
-duration: "01:00:31"
+audio_length: 20342189
+duration: "00:21:05"
 small_icon: mic
 main_image: "/images/static/04/0438.png"
 ---
@@ -17,7 +17,7 @@ main_image: "/images/static/04/0438.png"
 ## Ruby
 
  - [Concurrency in Ruby 3 with Guilds](http://olivierlacan.com/posts/concurrency-in-ruby-3-with-guilds/), [Beware the ORM: Locking and Joins](http://travisofthenorth.com/blog/2016/10/2/beware-the-orm) и [45 Ruby Blogs](http://blog.honeypot.io/45-ruby-blogs/)
- - [Multi-tenant Architecture with PostgreSQL Schemas](http://www.railscarma.com/blog/technical-articles/multi-tenant-architecture-postgresql-schemas/), [Using Phoenix with Legacy Rails Applications](http://littlelines.com/blog/2016/09/27/using-phoenix-with-a-legagy-rails-app/) и [Tensorflow.rb](https://github.com/somaticio/tensorflow.rb)
+ - [Using Phoenix with Legacy Rails Applications](http://littlelines.com/blog/2016/09/27/using-phoenix-with-a-legagy-rails-app/) и [Tensorflow.rb](https://github.com/somaticio/tensorflow.rb)
 
 ## JavaScript
 
