--- a/source/posts/2016/10-11-podcast-04-39.html.md
+++ b/source/posts/2016/10-11-podcast-04-39.html.md
@@ -3,11 +3,11 @@ title: "39 выпуск 04 сезона. Battle of Interpreters, React on Rails,
 date: 2016-10-11
 tags:
  - podcasts
-audio_url: "http://rwpod.podfm.ru/my/174/file/podfm_rwpod_my_38_174.mp3"
-audio_mirror: "https://github.com/rwpod/mirror/releases/download/04.38/0438.mp3"
+audio_url: "http://rwpod.podfm.ru/my/175/file/podfm_rwpod_my_39_175.mp3"
+audio_mirror: "https://github.com/rwpod/mirror/releases/download/04.39/0439.mp3"
 audio_format: "audio/mpeg"
-audio_length: 20342189
-duration: "00:21:05"
+audio_length: 32569547
+duration: "00:33:49"
 small_icon: mic
 main_image: "/images/static/04/0439.png"
 ---
@@ -18,7 +18,7 @@ main_image: "/images/static/04/0439.png"
 
  - [Battle of Interpreters: MRI vs JRuby vs Rubinius](http://www.blackbytes.info/2016/10/mri-vs-jruby-vs-rubinius/), [Walkthrough of my .vimrc file for Ruby development](http://janjiss.com/walkthrough-of-my-vimrc-file-for-ruby-development/) и [Bundler's Multiple Source Security Vulnerability](http://collectiveidea.com/blog/archives/2016/10/06/bundlers-multiple-source-security-vulnerability/)
  - [Deploy rails application with docker compose and capistrano](http://www.blazeboy.me/deploy-rails-application-with-docker-compose-and-capistrano.html), [The SQL Alternative To Counter Caches](https://medium.com/@eric.programmer/the-sql-alternative-to-counter-caches-59e2098b7d7) и [Auto-increment counter not persisted on disk with InnoDB](http://dalibornasevic.com/posts/72-auto-increment-counter-not-persisted-on-disk-with-innodb)
- - [React on Rails](https://product.reverb.com/react-on-rails-9936283aea07), [Whirly - a simple, colorful and customizable terminal spinner library for Ruby](https://github.com/janlelis/whirly) и [Hyperloop - React on Ruby](http://ruby-hyperloop.io/)
+ - [React on Rails](https://product.reverb.com/react-on-rails-9936283aea07), [Hyperloop - React on Ruby](http://ruby-hyperloop.io/) и [Whirly - a simple, colorful and customizable terminal spinner library for Ruby](https://github.com/janlelis/whirly)
 
 ## JavaScript
 
