--- a/source/posts/2016/10-18-podcast-04-40.html.md
+++ b/source/posts/2016/10-18-podcast-04-40.html.md
@@ -16,11 +16,13 @@ main_image: "/images/static/04/0440.png"
 
 ## Ruby
 
-
+ - [Euruko 2016 - Ruby is dead, long live Ruby!](http://dev.mikamai.com/post/151608679809/euruko-2016-ruby-is-dead-long-live-ruby)
+ - [Tips for Writing Fast Rails: Part 1](http://www.ombulabs.com/blog/performance/rails/writing-fast-rails.html)
 
 ## JavaScript
 
  - [Yarn: A new package manager for JavaScript](https://code.facebook.com/posts/1840075619545360)
+ - [You Might Not Need JavaScript - examples of common UI elements and interactions with HTML and CSS alone](http://youmightnotneedjs.com/)
 
 READMORE
 
