--- a/source/posts/2016/10-18-podcast-04-40.html.md
+++ b/source/posts/2016/10-18-podcast-04-40.html.md
@@ -18,11 +18,16 @@ main_image: "/images/static/04/0440.png"
 
  - [Euruko 2016 - Ruby is dead, long live Ruby!](http://dev.mikamai.com/post/151608679809/euruko-2016-ruby-is-dead-long-live-ruby)
  - [Tips for Writing Fast Rails: Part 1](http://www.ombulabs.com/blog/performance/rails/writing-fast-rails.html)
+ - [Design patterns for parsing binary files in Ruby](http://t-a-w.blogspot.com/2016/10/design-patterns-for-parsing-binary.html)
 
 ## JavaScript
 
  - [Yarn: A new package manager for JavaScript](https://code.facebook.com/posts/1840075619545360)
  - [You Might Not Need JavaScript - examples of common UI elements and interactions with HTML and CSS alone](http://youmightnotneedjs.com/)
+ - [We need JavaScript to fix the web](https://www.christianheilmann.com/2016/10/14/we-need-javascript-to-fix-the-web/)
+ - [Marionette v3.1.0 Released](http://blog.marionettejs.com/2016/10/13/v310-release/index.html)
+ - [Stupid ES6 tricks](https://engineering.haus.com/dumb-es6-tricks-53ecadd1b29f)
+ - [RE:DOM - Tiny UI library](https://redom.js.org/)
 
 READMORE
 
