--- a/source/posts/2016/10-18-podcast-04-40.html.md
+++ b/source/posts/2016/10-18-podcast-04-40.html.md
@@ -1,13 +1,13 @@
 ---
-title: "40 выпуск 04 сезона.  и прочее"
-date: 2016-10-10
+title: "40 выпуск 04 сезона. Tips for Writing Fast Rails, Yarn, Marionette v3.1.0, You Might Not Need JavaScript, RE:DOM и прочее"
+date: 2016-10-18
 tags:
  - podcasts
-audio_url: "http://rwpod.podfm.ru/my/175/file/podfm_rwpod_my_39_175.mp3"
-audio_mirror: "https://github.com/rwpod/mirror/releases/download/04.39/0439.mp3"
+audio_url: "http://rwpod.podfm.ru/my/176/file/podfm_rwpod_my_40_176.mp3"
+audio_mirror: "https://github.com/rwpod/mirror/releases/download/04.40/0440.mp3"
 audio_format: "audio/mpeg"
-audio_length: 32569547
-duration: "00:33:49"
+audio_length: 25973089
+duration: "00:26:57"
 small_icon: mic
 main_image: "/images/static/04/0440.png"
 ---
@@ -16,18 +16,13 @@ main_image: "/images/static/04/0440.png"
 
 ## Ruby
 
- - [Euruko 2016 - Ruby is dead, long live Ruby!](http://dev.mikamai.com/post/151608679809/euruko-2016-ruby-is-dead-long-live-ruby)
- - [Tips for Writing Fast Rails: Part 1](http://www.ombulabs.com/blog/performance/rails/writing-fast-rails.html)
- - [Design patterns for parsing binary files in Ruby](http://t-a-w.blogspot.com/2016/10/design-patterns-for-parsing-binary.html)
+ - [Euruko 2016 - Ruby is dead, long live Ruby!](http://dev.mikamai.com/post/151608679809/euruko-2016-ruby-is-dead-long-live-ruby) и [Tips for Writing Fast Rails: Part 1](http://www.ombulabs.com/blog/performance/rails/writing-fast-rails.html)
+ - [Design patterns for parsing binary files in Ruby](http://t-a-w.blogspot.com/2016/10/design-patterns-for-parsing-binary.html) и [10 Modern Software Over-Engineering Mistakes](https://medium.com/@rdsubhas/10-modern-software-engineering-mistakes-bc67fbef4fc8)
 
 ## JavaScript
 
- - [Yarn: A new package manager for JavaScript](https://code.facebook.com/posts/1840075619545360)
- - [You Might Not Need JavaScript - examples of common UI elements and interactions with HTML and CSS alone](http://youmightnotneedjs.com/)
- - [We need JavaScript to fix the web](https://www.christianheilmann.com/2016/10/14/we-need-javascript-to-fix-the-web/)
- - [Marionette v3.1.0 Released](http://blog.marionettejs.com/2016/10/13/v310-release/index.html)
- - [Stupid ES6 tricks](https://engineering.haus.com/dumb-es6-tricks-53ecadd1b29f)
- - [RE:DOM - Tiny UI library](https://redom.js.org/)
+ - [Yarn: A new package manager for JavaScript](https://code.facebook.com/posts/1840075619545360), [Marionette v3.1.0 Released](http://blog.marionettejs.com/2016/10/13/v310-release/index.html), [Angular 2.1.0](http://angularjs.blogspot.com/2016/10/angular-210-now-available.html) и [We need JavaScript to fix the web](https://www.christianheilmann.com/2016/10/14/we-need-javascript-to-fix-the-web/)
+ - [Stupid ES6 tricks](https://engineering.haus.com/dumb-es6-tricks-53ecadd1b29f), [You Might Not Need JavaScript - examples of common UI elements and interactions with HTML and CSS alone](http://youmightnotneedjs.com/), [Tesseract.js - a pure Javascript port of the popular Tesseract OCR engine](http://tesseract.projectnaptha.com/) и [RE:DOM - Tiny UI library](https://redom.js.org/)
 
 READMORE
 
