--- a/source/posts/2016/10-25-podcast-04-41.html.md
+++ b/source/posts/2016/10-25-podcast-04-41.html.md
@@ -16,23 +16,20 @@ main_image: "/images/static/04/0440.png"
 
 ## Ruby
 
- - [Unlocking Horizontal Scalability in Our Web Serving Tier](https://medium.com/airbnb-engineering/unlocking-horizontal-scalability-in-our-web-serving-tier-d907449cdbcf)
- - [Tracking SQL queries in Rails](http://stevenyue.com/blogs/tracking-sql-queries-in-rails/)
- - [Ruby Memoization using Singleton Method](http://www.techoalien.com/2016/10/ruby-memoization-using-singleton-method.html)
- - [Overcoming Primitive Obsession](https://blog.dnsimple.com/2016/10/overcoming-primitive-obsession/)
- - [Ruby on Rails implementation of a ranking system using PostgreSQL window functions](http://naturaily.com/blog/post/ruby-on-rails-implementation-of-a-ranking-system-using-postgresql-window-functions)
- - [DDoS Attack on DNS; Major sites including GitHub PSN, Twitter Suffering Outage](https://www.hackread.com/ddos-attack-dns-sites-suffer-outage/)
- - [Netflix Chaos Monkey Upgraded](http://techblog.netflix.com/2016/10/netflix-chaos-monkey-upgraded.html)
- - [Historic Achievement: Microsoft researchers reach human parity in conversational speech recognition](http://blogs.microsoft.com/next/2016/10/18/historic-achievement-microsoft-researchers-reach-human-parity-conversational-speech-recognition/)
+ - [Unlocking Horizontal Scalability in Our Web Serving Tier](https://medium.com/airbnb-engineering/unlocking-horizontal-scalability-in-our-web-serving-tier-d907449cdbcf) и [Overcoming Primitive Obsession](https://blog.dnsimple.com/2016/10/overcoming-primitive-obsession/)
+ - [Ruby Memoization using Singleton Method](http://www.techoalien.com/2016/10/ruby-memoization-using-singleton-method.html), [Tracking SQL queries in Rails](http://stevenyue.com/blogs/tracking-sql-queries-in-rails/) и [Ruby on Rails implementation of a ranking system using PostgreSQL window functions](http://naturaily.com/blog/post/ruby-on-rails-implementation-of-a-ranking-system-using-postgresql-window-functions)
+ - [DDoS Attack on DNS; Major sites including GitHub PSN, Twitter Suffering Outage](https://www.hackread.com/ddos-attack-dns-sites-suffer-outage/), [Netflix Chaos Monkey Upgraded](http://techblog.netflix.com/2016/10/netflix-chaos-monkey-upgraded.html) и [Historic Achievement: Microsoft researchers reach human parity in conversational speech recognition](http://blogs.microsoft.com/next/2016/10/18/historic-achievement-microsoft-researchers-reach-human-parity-conversational-speech-recognition/)
 
 ## JavaScript
 
- - [Npm 4.0.0 released](https://github.com/npm/npm/releases/tag/v4.0.0)
- - [Your code is probably good enough](https://medium.com/front-end-hacking/your-code-is-probably-good-enough-5d15b4df5ac6)
- - [Hashing Algorithms](https://blog.jscrambler.com/hashing-algorithms/)
- - [Why We Chose Vue.js](https://about.gitlab.com/2016/10/20/why-we-chose-vue/)
- - [NPM vs Yarn benchmark](https://www.berriart.com/blog/2016/10/npm-yarn-benchmark/)
- - [CacheP2P - a highly distributed cache platform based on WebTorrent and runs only in the browser](http://www.cachep2p.com/)
+ - [Npm 4.0.0 released](https://github.com/npm/npm/releases/tag/v4.0.0), [Yarn vs npm: Everything You Need to Know](https://www.sitepoint.com/yarn-vs-npm/) и [NPM vs Yarn benchmark](https://www.berriart.com/blog/2016/10/npm-yarn-benchmark/)
+ - [Your code is probably good enough](https://medium.com/front-end-hacking/your-code-is-probably-good-enough-5d15b4df5ac6), [Why We Chose Vue.js](https://about.gitlab.com/2016/10/20/why-we-chose-vue/) и [Hashing Algorithms](https://blog.jscrambler.com/hashing-algorithms/)
+ - [Pulp - create responsive email templates](http://pulp.glitchpack.com/), [TestCafe - a pure node.js solution for testing web apps](https://devexpress.github.io/testcafe/) и [CacheP2P - a highly distributed cache platform based on WebTorrent and runs only in the browser](http://www.cachep2p.com/)
+
+## Conferences
+
+ - [Ruby Meditation #12](https://www.facebook.com/events/343671329299576/)
+ - [Elixir Meetup 3.1](https://www.facebook.com/events/556566704546455/)
 
 READMORE
 
