--- a/source/posts/2016/10-25-podcast-04-41.html.md
+++ b/source/posts/2016/10-25-podcast-04-41.html.md
@@ -24,7 +24,7 @@ main_image: "/images/static/04/0441.png"
 
  - [Npm 4.0.0 released](https://github.com/npm/npm/releases/tag/v4.0.0), [JavaScript Grows Up and Gets Its Own Foundation](http://thenewstack.io/javascript-grows-gets-foundation/), [Yarn vs npm: Everything You Need to Know](https://www.sitepoint.com/yarn-vs-npm/) и [NPM vs Yarn benchmark](https://www.berriart.com/blog/2016/10/npm-yarn-benchmark/)
  - [Your code is probably good enough](https://medium.com/front-end-hacking/your-code-is-probably-good-enough-5d15b4df5ac6), [Why We Chose Vue.js](https://about.gitlab.com/2016/10/20/why-we-chose-vue/) и [Hashing Algorithms](https://blog.jscrambler.com/hashing-algorithms/)
- - [Pulp - create responsive email templates](http://pulp.glitchpack.com/), [TestCafe - a pure node.js solution for testing web apps](https://devexpress.github.io/testcafe/) и [CacheP2P - a highly distributed cache platform based on WebTorrent and runs only in the browser](http://www.cachep2p.com/)
+ - [Pulp - create responsive email templates](http://pulp.glitchpack.com/), [TestCafe - a pure node.js solution for testing web apps](https://devexpress.github.io/testcafe/), [PurpleJS - a JavaScript application framework running on the Java Virtual Machine](http://purplejs.io/) и [CacheP2P - a highly distributed cache platform based on WebTorrent and runs only in the browser](http://www.cachep2p.com/)
 
 ## Conferences
 
