--- a/source/posts/2016/10-25-podcast-04-41.html.md
+++ b/source/posts/2016/10-25-podcast-04-41.html.md
@@ -16,7 +16,7 @@ main_image: "/images/static/04/0441.png"
 
 ## Ruby
 
- - [DDoS Attack on DNS; Major sites including GitHub PSN, Twitter Suffering Outage](https://www.hackread.com/ddos-attack-dns-sites-suffer-outage/), [Unlocking Horizontal Scalability in Our Web Serving Tier](https://medium.com/airbnb-engineering/unlocking-horizontal-scalability-in-our-web-serving-tier-d907449cdbcf) и [Overcoming Primitive Obsession](https://blog.dnsimple.com/2016/10/overcoming-primitive-obsession/)
+ - [DDoS Attack on DNS; Major sites including GitHub PSN, Twitter Suffering Outage](https://www.hackread.com/ddos-attack-dns-sites-suffer-outage/), [Hash#compact and Hash#compact! now part of Ruby 2.4](http://blog.bigbinary.com/2016/10/24/hash-compact-and-hash-compact-now-part-of-ruby-2-4.html), [Unlocking Horizontal Scalability in Our Web Serving Tier](https://medium.com/airbnb-engineering/unlocking-horizontal-scalability-in-our-web-serving-tier-d907449cdbcf) и [Overcoming Primitive Obsession](https://blog.dnsimple.com/2016/10/overcoming-primitive-obsession/)
  - [Ruby Memoization using Singleton Method](http://www.techoalien.com/2016/10/ruby-memoization-using-singleton-method.html), [Tracking SQL queries in Rails](http://stevenyue.com/blogs/tracking-sql-queries-in-rails/) и [Ruby on Rails implementation of a ranking system using PostgreSQL window functions](http://naturaily.com/blog/post/ruby-on-rails-implementation-of-a-ranking-system-using-postgresql-window-functions)
  - [Netflix Chaos Monkey Upgraded](http://techblog.netflix.com/2016/10/netflix-chaos-monkey-upgraded.html) и [Historic Achievement: Microsoft researchers reach human parity in conversational speech recognition](http://blogs.microsoft.com/next/2016/10/18/historic-achievement-microsoft-researchers-reach-human-parity-conversational-speech-recognition/)
 
