--- a/source/posts/2016/11-01-podcast-04-42.html.md
+++ b/source/posts/2016/11-01-podcast-04-42.html.md
@@ -17,10 +17,19 @@ main_image: "/images/static/04/0442.png"
 ## Ruby
 
  - [Is Your Site Leaking Password Reset Links?](https://robots.thoughtbot.com/is-your-site-leaking-password-reset-links)
+ - [A Photo Gallery that Automatically Tags Your Images](https://blog.rebased.pl/2016/10/25/computer-vision-2.html)
+ - [Validation outside ActiveModel](http://blog.ragnarson.com/2016/10/26/validation-outside-activemodel.html)
+ - [Monitoring Sidekiq Using AWS Lambda and Slack](http://brandonhilkert.com/blog/monitoring-sidekiq-using-aws-lambda-and-slack/)
+ - [HexaPDF Code and First Version Released](http://gettalong.org/blog/2016/hexapdf-code-and-first-version-released.html)
+ - [Helpy is 1.0!](https://helpy.io/blog/helpy-1.0/)
+ - [Screencast: Debugging With Byebug](http://www.rubypigeon.com/posts/screencast-debugging-with-byebug/)
+ - [TZOffset - simple abstraction of a timezone offset](https://github.com/molybdenum-99/tz_offset)
 
 ## JavaScript
 
-
+ - [Node v7.0.0](https://nodejs.org/en/blog/release/v7.0.0/)
+ - [What’s new in IndexedDB 2.0?](https://hacks.mozilla.org/2016/10/whats-new-in-indexeddb-2-0/)
+ - [Redux without React — State Management in Vanilla JavaScript](https://www.sitepoint.com/redux-without-react-state-management-vanilla-javascript/)
 
 READMORE
 
