--- a/source/posts/2016/11-01-podcast-04-42.html.md
+++ b/source/posts/2016/11-01-podcast-04-42.html.md
@@ -30,6 +30,7 @@ main_image: "/images/static/04/0442.png"
  - [Node v7.0.0](https://nodejs.org/en/blog/release/v7.0.0/)
  - [What’s new in IndexedDB 2.0?](https://hacks.mozilla.org/2016/10/whats-new-in-indexeddb-2-0/)
  - [Redux without React — State Management in Vanilla JavaScript](https://www.sitepoint.com/redux-without-react-state-management-vanilla-javascript/)
+ - [OverReact - React for Dart](https://workiva.github.io/over_react/)
 
 READMORE
 
