--- a/source/posts/2016/11-01-podcast-04-42.html.md
+++ b/source/posts/2016/11-01-podcast-04-42.html.md
@@ -22,7 +22,7 @@ main_image: "/images/static/04/0442.png"
 
 ## JavaScript
 
- - [Node v7.0.0](https://nodejs.org/en/blog/release/v7.0.0/), [What’s new in IndexedDB 2.0?](https://hacks.mozilla.org/2016/10/whats-new-in-indexeddb-2-0/) и [Rising Trends in In JavaScript: A Comprehensive Guide to Libraries & Frameworks](https://envato.com/blog/rising-trends-in-javascript/)
+ - [Node v7.0.0](https://nodejs.org/en/blog/release/v7.0.0/), [What’s new in IndexedDB 2.0?](https://hacks.mozilla.org/2016/10/whats-new-in-indexeddb-2-0/), [Vue.js is easier to learn than jQuery](https://medium.com/js-dojo/vue-js-is-easier-to-learn-than-jquery-abbbb9c12cf8) и [Rising Trends in In JavaScript: A Comprehensive Guide to Libraries & Frameworks](https://envato.com/blog/rising-trends-in-javascript/)
  - [Redux without React — State Management in Vanilla JavaScript](https://www.sitepoint.com/redux-without-react-state-management-vanilla-javascript/), [Redux is Overhyped](https://medium.com/@shakiba/redux-is-overhyped-3ad6e42b7730) и [OverReact - React for Dart](https://workiva.github.io/over_react/)
  - [Next.js – small framework for server-rendered universal JavaScript apps](https://zeit.co/blog/next), [MathJax - beautiful math in all browsers](https://www.mathjax.org/), [Swip - a library to create multi device experiments](https://github.com/paulsonnentag/swip), [Shave - a  javascript plugin that truncates multi-line text to fit within an html element based on a set max-height](https://dollarshaveclub.github.io/shave/) и [JS Ipsum - generate your own JS gibberish](http://jsipsum.lunarlogic.io/)
 
