--- a/source/posts/2016/11-08-podcast-04-43.html.md
+++ b/source/posts/2016/11-08-podcast-04-43.html.md
@@ -16,17 +16,15 @@ main_image: "/images/static/04/0443.png"
 
 ## Ruby
 
- - [Ruby 2.4 implements Regexp#match? without polluting global variables](http://blog.bigbinary.com/2016/11/04/ruby-2-4-implements-regexp-match-without-polluting-global-variables.html)
- - [Ruby 2.4 implements Enumerable#sum](http://blog.bigbinary.com/2016/11/02/ruby-2-4-introduces-enumerable-sum.html)
- - [Getting rid of before_filter from your ApplicationController with cells](https://christoph.luppri.ch/articles/2016/11/06/getting-rid-of-before_filter-from-your-applicationcontroller-with-cells/)
- - [Duck typing vs type safety in Ruby](http://solnic.eu/2016/11/02/duck-typing-vs-type-safety-in-ruby.html)
- - [Purposes & Properties of Value Objects](https://blog.dnsimple.com/2016/11/purposes-and-properties-of-value-objects/)
- - [Introduction to fragment caching in Rails](https://blog.ragnarson.com/2016/11/02/introduction-to-fragment-caching-in-rails.html)
- - [Rails API - Throttling with Rack::Attack](https://www.driftingruby.com/episodes/rails-api-throttling-with-rack-attack)
+ - [Ruby 2.4 implements Regexp#match? without polluting global variables](http://blog.bigbinary.com/2016/11/04/ruby-2-4-implements-regexp-match-without-polluting-global-variables.html), [Ruby 2.4 implements Enumerable#sum](http://blog.bigbinary.com/2016/11/02/ruby-2-4-introduces-enumerable-sum.html) и [Duck typing vs type safety in Ruby](http://solnic.eu/2016/11/02/duck-typing-vs-type-safety-in-ruby.html)
+ - [Getting rid of before_filter from your ApplicationController with cells](https://christoph.luppri.ch/articles/2016/11/06/getting-rid-of-before_filter-from-your-applicationcontroller-with-cells/) и [Purposes & Properties of Value Objects](https://blog.dnsimple.com/2016/11/purposes-and-properties-of-value-objects/)
+ - [Introduction to fragment caching in Rails](https://blog.ragnarson.com/2016/11/02/introduction-to-fragment-caching-in-rails.html) и [Rails API - Throttling with Rack::Attack](https://www.driftingruby.com/episodes/rails-api-throttling-with-rack-attack)
 
 ## JavaScript
 
  - [GraphQL: 3 reasons not to use it](https://blog.hitchhq.com/graphql-3-reasons-not-to-use-it-7715f60cb934)
+ - [Migrating to Webpack 2](http://javascriptplayground.com/blog/2016/10/moving-to-webpack-2/)
+ - [Tesseract.js: How To OCR Remote Images from a URL in Node](https://www.twilio.com/blog/2016/11/a-simple-way-to-ocr-images-from-a-url-with-tesseract-js.html)
  - [Turbo.js - a small library that makes it easier to perform complex calculations that can be done in parallel](https://turbo.github.io/)
 
 READMORE
