--- a/source/posts/2016/11-08-podcast-04-43.html.md
+++ b/source/posts/2016/11-08-podcast-04-43.html.md
@@ -1,5 +1,5 @@
 ---
-title: "43 выпуск 04 сезона.  и прочее"
+title: "43 выпуск 04 сезона. Duck typing vs type safety in Ruby, Rack::Attack, Migrating to Webpack 2, Egjs, Turbo.js и прочее"
 date: 2016-11-08
 tags:
  - podcasts
@@ -22,10 +22,9 @@ main_image: "/images/static/04/0443.png"
 
 ## JavaScript
 
- - [GraphQL: 3 reasons not to use it](https://blog.hitchhq.com/graphql-3-reasons-not-to-use-it-7715f60cb934)
- - [Migrating to Webpack 2](http://javascriptplayground.com/blog/2016/10/moving-to-webpack-2/)
- - [Tesseract.js: How To OCR Remote Images from a URL in Node](https://www.twilio.com/blog/2016/11/a-simple-way-to-ocr-images-from-a-url-with-tesseract-js.html)
- - [Turbo.js - a small library that makes it easier to perform complex calculations that can be done in parallel](https://turbo.github.io/)
+ - [The JavaScript Wars: How did we get here?](http://cssence.com/blog/2016-11-the-javascript-wars), [What programming language should you learn first? ʇdıɹɔsɐʌɐɾ :ɹǝʍsuɐ](https://medium.freecodecamp.com/what-programming-language-should-i-learn-first-ʇdıɹɔsɐʌɐɾ-ɹǝʍsuɐ-19a33b0a467d) и [WebAssembly Browser Preview](http://v8project.blogspot.ru/2016/10/webassembly-browser-preview.html)
+ - [Viewports research, part umpteen](http://www.quirksmode.org/blog/archives/2016/11/viewports_resea.html), [GraphQL: 3 reasons not to use it](https://blog.hitchhq.com/graphql-3-reasons-not-to-use-it-7715f60cb934) и [Migrating to Webpack 2](http://javascriptplayground.com/blog/2016/10/moving-to-webpack-2/)
+ - [Tesseract.js: How To OCR Remote Images from a URL in Node](https://www.twilio.com/blog/2016/11/a-simple-way-to-ocr-images-from-a-url-with-tesseract-js.html), [Egjs - a jQuery-based JavaScript library consisting of UI interactions, effects, and utilities](https://naver.github.io/egjs/), [Turbo.js - a small library that makes it easier to perform complex calculations that can be done in parallel](https://turbo.github.io/) и [8 simple rules for a robust, scalable CSS architecture](https://github.com/jareware/css-architecture)
 
 READMORE
 
