--- a/source/posts/2016/11-15-podcast-04-44.html.md
+++ b/source/posts/2016/11-15-podcast-04-44.html.md
@@ -1,5 +1,5 @@
 ---
-title: "44 выпуск 04 сезона.  и прочее"
+title: "44 выпуск 04 сезона. Ruby 2.4 Binding#irb, GeoSpatial Search, Build Pacman, Whitestorm.js, Sprite Spirit, Alex.js, Indent.js и прочее"
 date: 2016-11-15
 tags:
  - podcasts
@@ -22,9 +22,9 @@ main_image: "/images/static/04/0444.png"
 
 ## JavaScript
 
- - [Container Components](https://medium.com/@learnreact/container-components-c0e67432e005)
- - [Whitestorm.js - framework for developing 3D web apps](https://whsjs.io)
- - [Indent.js - fast minimalistic pure indentation of JavaScript, CSS, and HTML](https://zebzhao.github.io/indent.js/)
+ - [Build Pacman](http://www.jeffreybiles.com/build-pacman), [The Problem with PostCSS](https://medium.com/@KingdaroBL/the-problem-with-postcss-86bfb5f0a3f8) и [@supports will change your life](http://www.lottejackson.com/learning/supports-will-change-your-life)
+ - [Container Components](https://medium.com/@learnreact/container-components-c0e67432e005), [Cubes Advent Calendar](http://tympanus.net/codrops/2016/11/09/cubes-advent-calendar/) и [Logging Errors in Client-Side Applications](https://www.sitepoint.com/logging-errors-client-side-apps/)
+ - [Whitestorm.js - framework for developing 3D web apps](https://whsjs.io), [Sprite Spirit - generator and SCSS Mixin that Brings Image Sprite to life](https://eliorshalev.github.io/sprite-spirit/), [Alex.js - catch insensitive, inconsiderate writing](http://alexjs.com/) и [Indent.js - fast minimalistic pure indentation of JavaScript, CSS, and HTML](https://zebzhao.github.io/indent.js/)
 
 
 READMORE
