--- a/source/posts/2016/12-06-podcast-04-46.html.md
+++ b/source/posts/2016/12-06-podcast-04-46.html.md
@@ -1,5 +1,5 @@
 ---
-title: "46 выпуск 04 сезона.  и прочее"
+title: "46 выпуск 04 сезона. Ruby 2.3.3, Double Splat Operator, Thredded, Cssreference, Ant Design, Amazon Autocomplete, Reptar и прочее"
 date: 2016-12-06
 tags:
  - podcasts
